# rust-cryptoki

./: .codespellrc  .gitignore  CHANGELOG.md  Cargo.toml  INSTALL_NOTES.md  README.md  ci.sh
.github/actions/ci_script/: action.yml
.github/workflows/: ci.yml  kryoptic-fips.yml  kryoptic.yml  nightly.yml
Test_OAEP/: Cargo.toml  Read me.txt
Test_OAEP/SoftHSM2/etc/: softhsm2.conf
cryptoki/: Cargo.toml  README.md
cryptoki-derive/: Cargo.toml
cryptoki-derive/src/: lib.rs
cryptoki-rustcrypto/: Cargo.toml
cryptoki-rustcrypto/src/: ecdsa.rs  lib.rs  rng.rs  x509.rs
cryptoki-rustcrypto/src/rsa/: mod.rs  pkcs1v15.rs  pss.rs
cryptoki-rustcrypto/tests/: common.rs  ecdsa.rs  rng.rs  rsa.rs  x509-ca.rs  x509.rs
cryptoki-sys/: Cargo.toml  Containerfile  README.md  build.rs  pkcs11.h  platform.h  regenerate_bindings.sh  rust-pkcs11.h
cryptoki-sys/oasis-headers/: README.md  pkcs11t.h
cryptoki-sys/src/: lib.rs
cryptoki-sys/src/bindings/: aarch64-apple-darwin.rs  aarch64-unknown-linux-gnu.rs  arm-unknown-linux-gnueabi.rs  generic.rs  i686-unknown-linux-gnu.rs  loongarch64-unknown-linux-gnu.rs  powerpc64-unknown-linux-gnu.rs  riscv64gc-unknown-linux-gnu.rs  x86_64-apple-darwin.rs  x86_64-pc-windows-msvc.rs  x86_64-unknown-darwin.rs  x86_64-unknown-freebsd.rs  x86_64-unknown-linux-gnu.rs  x86_64-windows.rs
cryptoki-sys/src/thales-safenet-extension/: aarch64-apple-darwin.rs
cryptoki-tests/: Cargo.toml
cryptoki-tests-derive/: Cargo.toml
cryptoki-tests-derive/src/: lib.rs
cryptoki-tests/src/: lib.rs
cryptoki/examples/: README.md  benchmark_attributes.rs  generate_key_pair.rs  thread_local_session.rs
cryptoki/src/: flag.rs  lib.rs  object.rs  tests_support.rs  types.rs
cryptoki/src/context/: flags.rs  general_purpose.rs  info.rs  locking.rs  mod.rs  session_management.rs  slot_token_management.rs
cryptoki/src/error/: mod.rs  rv.rs  rv_error.rs
cryptoki/src/functions/: decryption.rs  encryption.rs  general_purpose.rs  key_management.rs  mod.rs  object_management.rs  random.rs  session_management.rs  signing_macing.rs  slot_token_management.rs
cryptoki/src/mechanism/: aead.rs  aes.rs  dsa.rs  eddsa.rs  ekdf.rs  elliptic_curve.rs  flags.rs  hkdf.rs  kbkdf.rs  mechanism_info.rs  misc.rs  mldsa.rs  mod.rs  rsa.rs  vendor_defined.rs
cryptoki/src/objects/: mod.rs
cryptoki/src/session/: decryption.rs  digesting.rs  encapsulation.rs  encryption.rs  flags.rs  key_management.rs  message_decryption.rs  message_encryption.rs  message_signing.rs  mod.rs  object_management.rs  random.rs  session_info.rs  session_management.rs  signing_macing.rs  slot_token_management.rs  validation.rs
cryptoki/src/slot/: flags.rs  mod.rs  slot_info.rs  token_info.rs
cryptoki/src/types/: function.rs  locking.rs  mod.rs  object.rs  session.rs  slot_token.rs
cryptoki/src/types/mechanism/: mod.rs  rsa.rs
cryptoki/tests/: basic.rs  common.rs  drop_error_handling.rs  ml_dsa.rs  ml_kem.rs  parallel.rs  slh_dsa.rs  vendor_extensions.rs  wycheproof.rs
cryptoki/tests/common/: mock_pkcs11.rs  mod.rs  test_logger.rs
cryptoki/tests/mock_pkcs11/: Makefile  libmockpkcs11.dylib  mock_pkcs11.c
