[package]
name = "cryptoki-tests"
version = "0.1.0"
authors = ["Contributors to the Parsec project"]
edition = '2018'
description = "Rust-native wrapper around the PKCS #11 API"
readme = "README.md"
keywords = ["pkcs11", "cryptoki", "hsm"]
categories = ["api-bindings", "external-ffi-bindings", "cryptography", "hardware-support"]
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/rust-cryptoki"
documentation = "https://docs.rs/crate/cryptoki-tests"

[dependencies]
cryptoki = { path = "../cryptoki", version = "0.4.1" }
cryptoki-tests-derive = { path = "../cryptoki-tests-derive", version = "0.1.0" }
nix = { version = "0.26.2", features = [ "fs", "process" ] }
tempfile = "3.3.0"
testresult = "0.2.0"
