[package]
name = "cryptoki"
version = "0.9.0"
authors = ["Contributors to the Parsec project"]
edition = '2021'
description = "Rust-native wrapper around the PKCS #11 API"
readme = "README.md"
keywords = ["pkcs11", "cryptoki", "hsm"]
categories = ["api-bindings", "external-ffi-bindings", "cryptography", "hardware-support"]
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/rust-cryptoki"
documentation = "https://docs.rs/crate/cryptoki"
rust-version = "1.66.0"

[dependencies]
bitflags = "1.3"
libloading = "0.8.6"
log = "0.4.14"
cryptoki-sys = { path = "../cryptoki-sys", version = "0.3.0" }
paste = { path = "../paste", version = "1.0.6" }
secrecy = "0.8.0"

[dev-dependencies]
num-traits = "0.2.14"
hex = "0.4.3"
serial_test = "0.5.1"
testresult = "0.4.1"

[features]
generate-bindings = ["cryptoki-sys/generate-bindings"]
serde = ["secrecy/serde"]
