[package]
name = "cryptoki"
version = "0.10.1"
authors = ["Contributors to the Parsec project"]
edition = '2021'
description = "Rust-native wrapper around the PKCS #11 API"
readme = "README.md"
keywords = ["pkcs11", "cryptoki", "hsm"]
categories = ["api-bindings", "external-ffi-bindings", "cryptography", "hardware-support"]
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/rust-cryptoki"
documentation = "https://docs.rs/crate/cryptoki"
rust-version = "1.77"

[dependencies]
bitflags = "1.3.2"
libloading = "0.8.8"
log = "0.4.27"
cryptoki-sys = { path = "../cryptoki-sys", version = "0.4.1" }
paste = "1.0.15"
secrecy = "0.10.3"

[dev-dependencies]
serial_test = "3.2.0"
testresult = "0.4.1"

[features]
generate-bindings = ["cryptoki-sys/generate-bindings"]
serde = ["secrecy/serde"]
