[package]
name = "cryptoki"
version = "0.11.0"
authors = ["Contributors to the Parsec project"]
edition = '2021'
description = "Rust-native wrapper around the PKCS #11 API"
readme = "README.md"
keywords = ["pkcs11", "cryptoki", "hsm"]
categories = ["api-bindings", "external-ffi-bindings", "cryptography", "hardware-support"]
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/rust-cryptoki"
documentation = "https://docs.rs/crate/cryptoki"
rust-version = "1.77"

[dependencies]
bitflags = "2.10.0"
libloading = "0.8.9"
log = "0.4.28"
cryptoki-sys = { path = "../cryptoki-sys", version = "0.5.0" }
paste = "1.0.15"
secrecy = "0.10.3"

[dev-dependencies]
hex = "0.4.3"
serial_test = "3.2.0"
testresult = "0.4.1"
wycheproof = { version = "0.6.0", features = ["aead"] }

[features]
generate-bindings = ["cryptoki-sys/generate-bindings"]
serde = ["secrecy/serde"]
